Some changes on fonts

--- a/fastnet/assets/css/index.css
+++ b/fastnet/assets/css/index.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Aboreto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
 body {
     margin: 0;
     padding: 0;
@@ -71,8 +71,9 @@ html {
 
 .nav-item .nav-link {
     text-decoration: none;
-    font-size: 18px;
+    font-size: 17px;
     color: var(--dark-color);
+    font-family: 'Comfortaa', cursive;
 }
 
 .nav-link.active {
@@ -200,24 +201,6 @@ html {
 #hero .hero-img img {
     width: 420px;
 }
-
-
-/* #hero .hero-img img.wifi {
-    width: 80px;
-    position: absolute;
-    right: 30px;
-    top: 15px;
-    animation: swing 1.5s ease-in-out infinite both;
-}
-
-@keyframes swing {
-    from {
-        transform: translateY(10px);
-    }
-    to {
-        transform: translateY(-0px);
-    }
-} */
 
 
 /* ==== Media Queries ==== */
