More sections have been added

--- a/fastnet/assets/css/utilities.css
+++ b/fastnet/assets/css/utilities.css
@@ -2,13 +2,13 @@
 
 :root {
     --primary-color: #1b696f;
-    --secondary-color: #88a981;
+    --secondary-color: #396a33;
     --dark-color: #343434;
     --white-color: #fff;
     --light-color: #f8f9fa;
     --danger-color: #a52a2a;
     --redish-color: #85390d;
-    --success-color: #308824;
+    --success-color: #88a981;
     --warning-color: #f8b706f1;
     --light-blue-color: #075fb8;
     --gray-color: #808080;
