--- a/fastnet/assets/css/index.css
+++ b/fastnet/assets/css/index.css
@@ -178,7 +178,7 @@ html {
 }
 
 #hero .hero-text span {
-    font-family: 'Julius Sans One', sans-serif;
+    font-family: 'Aboreto', cursive;
     color: var(--black-color);
 }
 
@@ -249,7 +249,7 @@ html {
         font-size: 40px;
     }
     #hero .hero-img {
-        margin-top: 5px;
+        margin-top: 20px;
     }
     #hero .hero-img img {
         width: 100%;
@@ -273,7 +273,7 @@ html {
         font-size: 30px;
     }
     #hero .hero-img {
-        margin-top: 5px;
+        margin-top: 15px;
     }
     #hero .hero-img img {
         width: 100%;
@@ -299,6 +299,9 @@ html {
 #paralax p {
     text-align: center;
 }
+
+
+/* ==== Media Queries ==== */
 
 @media only screen and (max-width:768px) {
     #paralax {
@@ -340,5 +343,136 @@ html {
     #paralax p {
         font-size: 30px;
         margin-top: 50px;
+    }
+}
+
+
+/* ===================================================
+# Featured
+=====================================================*/
+
+#featured {
+    background: var(--primary-color);
+    color: var(--white-color);
+    padding: 90px 0;
+}
+
+#featured .featured-img img {
+    width: 450px;
+}
+
+#featured .featured-text h1 {
+    font-family: 'Aboreto', cursive;
+    font-size: 60px;
+}
+
+#featured .featured-text p {
+    font-weight: 300;
+    margin-top: -20px;
+    padding-right: 60px;
+    line-height: 1.7em;
+}
+
+
+/* ==== Media Queries ==== */
+
+@media only screen and (max-width:1060px) {
+    #featured .row {
+        flex-flow: column wrap;
+    }
+    #featured .featured-img img {
+        width: 100%;
+    }
+    #featured .featured-text h1 {
+        font-size: 60px;
+    }
+}
+
+@media only screen and (max-width:768px) {
+    #featured {
+        padding-top: 40px;
+    }
+    #featured .featured-img img {
+        width: 100%;
+    }
+    #featured .featured-text {
+        margin-top: -30px;
+    }
+}
+
+@media only screen and (max-width:576px) {
+    #featured .featured-text h1 {
+        font-size: 60px;
+    }
+    #featured .featured-text p {
+        margin-top: -20px;
+        padding-right: 0px;
+    }
+}
+
+
+/* ===================================================
+# Featured-2
+=====================================================*/
+
+#featured-2 {
+    background: var(--light-color);
+    color: var(--black-color);
+    padding: 90px 0;
+}
+
+#featured-2 .featured-2-img img {
+    width: 450px;
+}
+
+#featured-2 .featured-2-text h1 {
+    font-family: 'Aboreto', cursive;
+    font-size: 60px;
+}
+
+#featured-2 .featured-2-text p {
+    font-weight: 300;
+    margin-top: -20px;
+    padding-right: 60px;
+    line-height: 1.7em;
+}
+
+
+/* ==== Media Queries ==== */
+
+@media only screen and (max-width:1060px) {
+    #featured-2 .row {
+        flex-flow: column wrap;
+    }
+    #featured-2 .featured-2-img img {
+        width: 100%;
+    }
+    #featured-2 .featured-2-text h1 {
+        font-size: 60px;
+    }
+}
+
+@media only screen and (max-width:768px) {
+    #featured-2 {
+        padding-top: 30px;
+    }
+    #featured-2 .featured-2-img {
+        margin-top: -40PX;
+    }
+    #featured-2 .featured-2-img img {
+        width: 100%;
+    }
+    #featured-2 .featured-2-text {
+        margin-top: 0px;
+    }
+}
+
+@media only screen and (max-width:576px) {
+    #featured-2 .featured-2-text h1 {
+        font-size: 60px;
+    }
+    #featured-2 .featured-2-text p {
+        margin-top: -20px;
+        padding-right: 0px;
     }
 }
