changes on hero section

--- a/fastnet/assets/css/index.css
+++ b/fastnet/assets/css/index.css
@@ -260,6 +260,9 @@ html {
     #hero {
         height: 750px;
     }
+    #hero .hero-text span {
+        font-size: 32px;
+    }
 }
 
 @media only screen and (max-width: 326px) {
