--- a/fastnet/assets/css/index.css
+++ b/fastnet/assets/css/index.css
@@ -115,6 +115,7 @@ html {
         margin-top: 70px;
         padding: 40px 30px;
         transition: all .8s;
+        border-top: 1px solid var(--light-gray-color);
     }
     .navbar #check:checked~.navbar-nav {
         left: 0;
