--- a/fastnet/assets/css/index.css
+++ b/fastnet/assets/css/index.css
@@ -59,8 +59,9 @@ html {
 }
 
 .navbar .navbar-nav {
-    margin-right: 90px;
     display: flex;
+    margin-left: auto;
+    margin-right: 30px;
 }
 
 .navbar-nav .nav-item {
@@ -89,6 +90,32 @@ html {
 
 .navbar #check {
     display: none;
+}
+
+.navbar .social {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 1.2rem;
+    margin-right: 60px;
+}
+
+.navbar .social a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: var(--primary-color);
+    font-size: 22px;
+    transition: all .3s;
+    border: 1px solid var(--dark-color);
+    border-radius: 50px;
+    height: 38px;
+    width: 38px;
+}
+
+.navbar .social a:hover {
+    color: var(--gray-color);
 }
 
 
