--- a/fastnet/assets/css/index.css
+++ b/fastnet/assets/css/index.css
@@ -61,7 +61,7 @@ html {
 .navbar .navbar-nav {
     display: flex;
     margin-left: auto;
-    margin-right: 30px;
+    margin-right: 15px;
 }
 
 .navbar-nav .nav-item {
@@ -75,6 +75,11 @@ html {
     font-size: 17px;
     color: var(--dark-color);
     font-family: 'Comfortaa', cursive;
+    transition: all .3s;
+}
+
+.nav-item .nav-link:hover {
+    color: var(--primary-color);
 }
 
 .nav-link.active {
@@ -97,7 +102,7 @@ html {
     justify-content: start;
     align-items: center;
     gap: 1.2rem;
-    margin-right: 60px;
+    margin-right: 90px;
 }
 
 .navbar .social a {
@@ -137,14 +142,28 @@ html {
         background: var(--white-color);
         top: 0;
         left: -150%;
-        height: 700px;
+        height: 1200px;
         width: 100%;
         margin-top: 70px;
-        padding: 40px 30px;
+        padding: 30px 30px;
         transition: all .8s;
         border-top: 1px solid var(--light-gray-color);
     }
     .navbar #check:checked~.navbar-nav {
+        left: 0;
+    }
+    .navbar .social {
+        position: absolute;
+        background: var(--white-color);
+        top: 300px;
+        left: -150%;
+        height: 15px;
+        width: 100%;
+        margin-top: 70px;
+        padding: 40px 30px;
+        transition: all .8s;
+    }
+    .navbar #check:checked~.social {
         left: 0;
     }
     .navbar-nav .nav-item {
@@ -566,6 +585,73 @@ html {
         font-size: 40px;
     }
     #featured-3 .featured-3-text p {
+        margin-top: -5px;
+        padding-right: 0px;
+    }
+}
+
+
+/* ===================================================
+# Footer
+=====================================================*/
+
+#footer {
+    background: var(--white-color);
+    color: var(--black-color);
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    height: 50vh;
+}
+
+#footer img {
+    width: 200px;
+}
+
+#footer .footer-text h1 {
+    font-family: 'Aboreto', cursive;
+    font-size: 60px;
+}
+
+#footer .footer-text p {
+    font-weight: 300;
+    margin-top: -20px;
+    padding-right: 60px;
+    line-height: 1.7em;
+}
+
+
+/* ==== Media Queries ==== */
+
+@media only screen and (max-width:1060px) {
+    #footer .row {
+        flex-flow: column wrap;
+    }
+    #footer .footer-img img {
+        width: 100%;
+    }
+    #footer .footer-text h1 {
+        font-size: 60px;
+    }
+}
+
+@media only screen and (max-width:768px) {
+    #footer {
+        padding-top: 40px;
+    }
+    #footer .footer-img img {
+        width: 100%;
+    }
+    #footer .footer-text {
+        margin-top: -30px;
+    }
+}
+
+@media only screen and (max-width:576px) {
+    #footer .footer-text h1 {
+        font-size: 40px;
+    }
+    #footer .footer-text p {
         margin-top: -5px;
         padding-right: 0px;
     }
