Changed featured-3 background color

--- a/fastnet/assets/css/index.css
+++ b/fastnet/assets/css/index.css
@@ -532,7 +532,7 @@ html {
 =====================================================*/
 
 #featured-3 {
-    background: var(--secondary-color);
+    background: var(--primary-color);
     color: var(--white-color);
     padding: 90px 0;
 }
