--- a/fastnet/assets/css/utilities.css
+++ b/fastnet/assets/css/utilities.css
@@ -225,13 +225,9 @@
     color: var(--white-color);
     border: none;
     border-radius: 5px;
-    transition: all .4s ease-in-out;
+    transition: all .3s ease;
     white-space: nowrap;
-}
-
-.btn-outline {
-    background-color: transparent;
-    border: 1px solid var(--white-color);
+    text-decoration: none;
 }
 
 .btn:hover,
@@ -270,6 +266,17 @@
 .btn-white {
     background-color: var(--white-color);
     color: var(--dark-color);
+}
+
+.btn-outline-white {
+    background-color: transparent;
+    border: 1px solid var(--white-color);
+}
+
+.btn-outline-white:hover {
+    background-color: var(--white-color);
+    border: 1px solid var(--white-color);
+    color: var(--primary-color);
 }
 
 .bg-gray,
