--- a/fastnet/assets/css/utilities.css
+++ b/fastnet/assets/css/utilities.css
@@ -221,10 +221,11 @@
     display: inline-block;
     padding: 10px 30px;
     cursor: pointer;
-    background-color: var(--primary-color);
     color: var(--white-color);
     border: none;
     border-radius: 5px;
+    background-color: var(--primary-color);
+    border: 2px solid var(--primary-color);
     transition: all .3s ease;
     white-space: nowrap;
     text-decoration: none;
@@ -232,7 +233,9 @@
 
 .btn:hover,
 .btn:focus {
-    background: var(--dark-color);
+    background: transparent;
+    border: 2px solid var(--primary-color);
+    color: var(--primary-color);
 }
 
 
@@ -244,9 +247,33 @@
     color: var(--white-color);
 }
 
+.btn-outline-primary {
+    background-color: transparent;
+    border: 2px solid var(--primary-color);
+    color: var(--primary-color);
+}
+
+.btn-outline-primary:hover {
+    background-color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    color: var(--white-color);
+}
+
 .bg-secondary,
 .btn-secondary {
     background-color: var(--secondary-color);
+    color: var(--white-color);
+}
+
+.btn-outline-secondary {
+    background-color: transparent;
+    border: 2px solid var(--secondary-color);
+    color: var(--secondary-color);
+}
+
+.btn-outline-secondary:hover {
+    background-color: var(--secondary-color);
+    border: 2px solid var(--secondary-color);
     color: var(--white-color);
 }
 
@@ -256,10 +283,33 @@
     color: var(--white-color);
 }
 
+.btn-outline-dark {
+    background-color: transparent;
+    border: 2px solid var(--dark-color);
+    color: var(--dark-color);
+}
+
+.btn-outline-dark:hover {
+    background-color: var(--dark-color);
+    border: 2px solid var(--dark-color);
+    color: var(--white-color);
+}
+
 .bg-light,
 .btn-light {
     background-color: var(--light-color);
     color: var(--dark-color);
+}
+
+.btn-outline-light {
+    background-color: transparent;
+    border: 2px solid var(--light-color);
+}
+
+.btn-outline-light:hover {
+    background-color: var(--light-color);
+    border: 2px solid var(--light-color);
+    color: var(--primary-color);
 }
 
 .bg-white,
@@ -270,12 +320,12 @@
 
 .btn-outline-white {
     background-color: transparent;
-    border: 1px solid var(--white-color);
+    border: 2px solid var(--white-color);
 }
 
 .btn-outline-white:hover {
     background-color: var(--white-color);
-    border: 1px solid var(--white-color);
+    border: 2px solid var(--white-color);
     color: var(--primary-color);
 }
 
@@ -824,6 +874,9 @@
     font-size: 50px;
     font-weight: 300;
 }
+
+
+/* === End displays === */
 
 
 /* === End displays === */
