--- a/fastnet/assets/css/index.css
+++ b/fastnet/assets/css/index.css
@@ -457,10 +457,10 @@
 
 
 /* ===================================================
-# Swiper
+# Testimonial
 =====================================================*/
 
-#swiper {
+#testimonial {
     position: relative;
     background: var(--white-color);
     color: var(--black-color);
@@ -469,40 +469,40 @@
     overflow: auto;
     padding: 25px 0 60px 0;
     overflow: hidden;
+    margin-bottom: 30px;
 }
 
-#swiper .container {
+#testimonial .container {
     overflow: hidden;
 }
 
-#swiper .swiper {
+#testimonial .swiper {
     width: 1050px;
 }
 
-#swiper .testimonial {
+#testimonial .testimonial-heading {
     font-family: 'Aboreto', cursive;
     font-size: 60px;
     text-align: center;
 }
 
-#swiper .card {
+#testimonial .card {
     position: relative;
-    background: #fff;
+    background: var(--white-color);
     border-radius: 20px;
     margin: 10px 0;
-    width: 100%;
 }
 
-#swiper .card::before {
+#testimonial .card::before {
     content: "";
     position: absolute;
-    height: 45%;
+    height: 32%;
     width: 100%;
     background: var(--light-color);
     border-radius: 20px 20px 0 0;
 }
 
-#swiper .card .card-content {
+#testimonial .card .card-content {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -511,7 +511,7 @@
     z-index: 100;
 }
 
-#swiper .card .card-image {
+#testimonial .card .card-image {
     height: 140px;
     width: 140px;
     border-radius: 50%;
@@ -519,53 +519,53 @@
     background: var(--primary-color);
 }
 
-#swiper .card .card-image img {
+#testimonial .card .card-image img {
     height: 100%;
     width: 100%;
     object-fit: cover;
     border-radius: 50%;
-    border: 3px solid#fff;
+    border: 3px solid var(--white-color);
 }
 
-#swiper .card .name-profession {
+#testimonial .card .name-profession {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 60px;
+    margin-top: 15px;
     color: #333;
 }
 
-#swiper .name-profession .name {
+#testimonial .name-profession .name {
     font-size: 20px;
     font-weight: 600;
 }
 
-#swiper .name-profession .profession {
+#testimonial .name-profession .profession {
     font-size: 15px;
     font-weight: 500;
 }
 
-#swiper .card .review {
+#testimonial .card .review {
     color: var(--gray-color);
     text-align: center;
 }
 
-#swiper .swiper-pagination-bullet {
+#testimonial .swiper-pagination-bullet {
     height: 7px;
     width: 26px;
     border-radius: 25px;
     background: var(--primary-color);
 }
 
-#swiper .swiper-button-next,
-#swiper .swiper-button-prev {
+#testimonial .swiper-button-next,
+#testimonial .swiper-button-prev {
     opacity: 0.7;
     color: var(--primary-color);
     outline: none;
 }
 
-#swiper .swiper-button-next:hover,
-#swiper .swiper-button-prev:hover {
+#testimonial .swiper-button-next:hover,
+#testimonial .swiper-button-prev:hover {
     opacity: 1;
 }
 
@@ -573,19 +573,19 @@
 /* ==== Media Queries ==== */
 
 @media only screen and (max-width:1060px) {
-    #swiper .testimonial {
+    #testimonial .testimonial-heading {
         font-size: 50px;
     }
 }
 
 @media only screen and (max-width:768px) {
-    #swiper .testimonial {
+    #testimonial .testimonial-heading {
         font-size: 40px;
     }
 }
 
 @media only screen and (max-width:576px) {
-    #swiper .testimonial {
+    #testimonial .testimonial-heading {
         font-size: 35px;
     }
 }
