--- a/fastnet/assets/css/index.css
+++ b/fastnet/assets/css/index.css
@@ -183,11 +183,15 @@
 #featured {
     background: var(--primary-color);
     color: var(--white-color);
-    padding: 90px 0;
+    padding: 40px 0 10px 0;
 }
 
 #featured .featured-img img {
     width: 500px;
+}
+
+#featured .featured-text {
+    margin-top: 30px;
 }
 
 #featured .featured-text h1 {
@@ -219,7 +223,8 @@
 
 @media only screen and (max-width:768px) {
     #featured {
-        padding-top: 75px;
+        padding-top: 30px;
+        padding-bottom: 90px;
     }
     #featured .featured-img img {
         width: 100%;
@@ -232,6 +237,7 @@
 @media only screen and (max-width:576px) {
     #featured {
         padding-top: 20px;
+        padding-bottom: 80px;
     }
     #featured .featured-text {
         margin-top: -80px;
@@ -253,7 +259,7 @@
 #featured-2 {
     background: var(--light-color);
     color: var(--black-color);
-    padding: 90px 0;
+    padding: 60px 0;
 }
 
 #featured-2 .featured-2-img img {
@@ -305,6 +311,7 @@
 @media only screen and (max-width:576px) {
     #featured-2 {
         padding-top: 20px;
+        padding-bottom: 40px;
     }
     #featured-2 .featured-2-img {
         margin-top: -20PX;
@@ -326,7 +333,7 @@
 #featured-3 {
     background: var(--white-color);
     color: var(--black-color);
-    padding: 90px 0;
+    padding: 50px 0;
 }
 
 #featured-3 .featured-3-img img {
@@ -374,7 +381,8 @@
 
 @media only screen and (max-width:576px) {
     #featured-3 {
-        padding-top: 20px;
+        padding-top: 10px;
+        padding-bottom: 65px;
     }
     #featured-3 .featured-3-text {
         margin-top: -80px;
