--- a/fastnet/assets/css/utilities.css
+++ b/fastnet/assets/css/utilities.css
@@ -122,7 +122,7 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    gap: 5px;
     justify-content: center;
     align-items: center;
     height: 100%;
@@ -140,6 +140,13 @@
 
 .grip-ish>* {
     flex: 1 1 10em;
+}
+
+@media only screen and (max-width:576px) {
+    .grid {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 15px;
+    }
 }
 
 
@@ -180,7 +187,7 @@
     color: #333;
     border-radius: 10px;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
-    margin: 10px;
+    margin: 5px;
 }
 
 .card-img {
@@ -204,11 +211,11 @@
 }
 
 .card-body {
-    padding: 20px;
+    padding: 25px;
 }
 
 .card-body h2 {
-    line-height: 3.0rem;
+    line-height: 1.0rem;
     font-weight: 600;
 }
 
