--- a/fastnet/assets/css/utilities.css
+++ b/fastnet/assets/css/utilities.css
@@ -119,17 +119,17 @@
 
 /* --- Grid --- */
 
-.grid {
+.grid-2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 5px;
-    justify-content: center;
-    align-items: center;
     height: 100%;
 }
 
 .grid-3 {
+    display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
 }
 
 .grid-ish {
@@ -143,7 +143,8 @@
 }
 
 @media only screen and (max-width:576px) {
-    .grid {
+    .grid-2,
+    .grid-3 {
         grid-template-columns: repeat(1, 1fr);
         gap: 15px;
     }
