--- a/fastnet/assets/css/projects.css
+++ b/fastnet/assets/css/projects.css
@@ -61,9 +61,29 @@
 =====================================================*/
 
 #projects {
-    background: var(--light-color);
-    color: var(--black-color);
-    padding: 60px 0;
+    background: var(--primary-color);
+    color: var(--white-color);
+    display: flex;
+    width: 100%;
+    height: 420px;
+    flex-direction: row;
+    overflow: hidden;
+}
+
+#projects .project-img {
+    width: 60%;
+    height: 100%;
+}
+
+#projects img {
+    width: 100%;
+    height: 100%;
+}
+
+#projects .project-text {
+    width: 50%;
+    height: 100%;
+    padding: 90px 50px 0 50px;
 }
 
 #projects h2 {
@@ -71,145 +91,47 @@
 }
 
 #projects p {
-    color: var(--dark-color);
-}
-
-
-/* ==== Media Queries ==== */
-
-@media only screen and (max-width:768px) {
-    #projects {
-        padding-top: 40px;
-        padding-bottom: 40px;
-    }
-}
-
-
-/* ===================================================
-# Team
-=====================================================*/
-
-#team {
-    background: var(--primary-color);
     color: var(--white-color);
-    padding: 20px 0 60px 0;
-}
-
-#team .team-heading {
-    font-family: 'Aboreto', cursive;
-    font-size: 60px;
-    text-align: center;
-}
-
-#team .card {
-    position: relative;
-    background: #fff;
-    border-radius: 20px;
-    margin: 10px 10px;
-}
-
-#team .card::before {
-    content: "";
-    position: absolute;
-    height: 45%;
-    width: 100%;
-    background: var(--light-color);
-    border-radius: 20px 20px 0 0;
-}
-
-#team .card .card-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 30px;
-    position: relative;
-    z-index: 100;
-}
-
-#team .card .card-image {
-    height: 140px;
-    width: 140px;
-    border-radius: 50%;
-    padding: 3px;
-    background: var(--primary-color);
-}
-
-#team .card .card-image img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-    border: 3px solid var(--white-color);
-}
-
-#team .card .social {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-#team .card .social i {
-    opacity: 0.6;
-    margin-top: 10px;
-    transition: all 0.3s ease;
-    cursor: pointer;
-    color: var(--primary-color);
-    font-size: 20px;
-    margin-right: 5px;
-}
-
-#team .card .social i:hover {
-    opacity: 1;
-}
-
-#team .card .name-profession {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-    color: #333;
-}
-
-#team .name-profession .name {
-    font-size: 20px;
-    font-weight: 600;
-}
-
-#team .name-profession .profession {
-    font-size: 15px;
-    font-weight: 500;
-}
-
-#team .card .review {
-    color: var(--gray-color);
-    text-align: center;
 }
 
 
 /* ==== Media Queries ==== */
-
-@media only screen and (max-width:1060px) {
-    #team {
-        padding: 20px 0 50px 0;
-    }
-    #team .team-heading {
-        font-size: 50px;
-    }
-}
-
-@media only screen and (max-width:768px) {
-    #team {
-        padding: 30px 0 45px 0;
-    }
-    #team .team-heading {
-        font-size: 40px;
-    }
-}
 
 @media only screen and (max-width:576px) {
-    #team .team-heading {
-        font-size: 35px;
+    #projects {
+        display: flex;
+        width: 100%;
+        height: 680px;
+        flex-direction: column;
+    }
+    #projects .project-img {
+        width: 100%;
+    }
+    #projects .project-text {
+        width: 300px;
+        height: 100%;
+        padding: 30px 0px 30px 40px;
+    }
+}
+
+@media only screen and (max-width:368px) {
+    #projects {
+        display: flex;
+        width: 100%;
+        height: 680px;
+        flex-direction: column;
+    }
+    #projects .project-img {
+        width: 100%;
+        height: auto;
+    }
+    #projects img {
+        width: 100%;
+        height: auto;
+    }
+    #projects .project-text {
+        width: 250px;
+        height: auto;
+        padding: 30px 0px 30px 30px;
     }
 }
