--- a/fastnet/assets/css/utilities.css
+++ b/fastnet/assets/css/utilities.css
@@ -119,6 +119,12 @@
 
 /* --- Grid --- */
 
+.grid-1 {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    height: 100%;
+}
+
 .grid-2 {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
