--- a/fastnet/assets/css/index.css
+++ b/fastnet/assets/css/index.css
@@ -591,6 +591,13 @@
     #testimonial .testimonial-heading {
         font-size: 50px;
     }
+    #testimonial .swiper-pagination-bullet {
+        display: none;
+    }
+    #testimonial .swiper-button-next,
+    #testimonial .swiper-button-prev {
+        display: none;
+    }
 }
 
 @media only screen and (max-width:768px) {
