--- a/fastnet/assets/css/projects.css
+++ b/fastnet/assets/css/projects.css
@@ -61,29 +61,9 @@
 =====================================================*/
 
 #projects {
-    background: var(--primary-color);
-    color: var(--white-color);
-    display: flex;
-    width: 100%;
-    height: 420px;
-    flex-direction: row;
-    overflow: hidden;
-}
-
-#projects .project-img {
-    width: 60%;
-    height: 100%;
-}
-
-#projects img {
-    width: 100%;
-    height: 100%;
-}
-
-#projects .project-text {
-    width: 50%;
-    height: 100%;
-    padding: 90px 50px 0 50px;
+    background: var(--light-color);
+    color: var(--black-color);
+    padding: 45px 0;
 }
 
 #projects h2 {
@@ -91,47 +71,21 @@
 }
 
 #projects p {
-    color: var(--white-color);
+    color: var(--dark-color);
 }
 
 
 /* ==== Media Queries ==== */
 
-@media only screen and (max-width:576px) {
+@media only screen and (max-width:768px) {
     #projects {
-        display: flex;
-        width: 100%;
-        height: 680px;
-        flex-direction: column;
-    }
-    #projects .project-img {
-        width: 100%;
-    }
-    #projects .project-text {
-        width: 300px;
-        height: 100%;
-        padding: 30px 0px 30px 40px;
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
 }
 
-@media only screen and (max-width:368px) {
-    #projects {
-        display: flex;
-        width: 100%;
-        height: 680px;
-        flex-direction: column;
-    }
-    #projects .project-img {
-        width: 100%;
-        height: auto;
-    }
-    #projects img {
-        width: 100%;
-        height: auto;
-    }
-    #projects .project-text {
-        width: 250px;
-        height: auto;
-        padding: 30px 0px 30px 30px;
+@media only screen and (max-width:576px) {
+    #projects .container {
+        padding: 0 20px;
     }
 }
