--- a/fastnet/assets/css/services.css
+++ b/fastnet/assets/css/services.css
@@ -61,9 +61,30 @@
 =====================================================*/
 
 #services {
-    background: var(--light-color);
-    color: var(--black-color);
-    padding: 60px 0;
+    background: var(--primary-color);
+    color: var(--white-color);
+    display: flex;
+    width: 100%;
+    height: 450px;
+    flex-direction: row;
+    overflow: hidden;
+}
+
+#services .service-img {
+    width: 60%;
+    height: 100%;
+}
+
+#services img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#services .service-text {
+    width: 50%;
+    height: 100%;
+    padding: 90px 50px 0 50px;
 }
 
 #services h2 {
@@ -71,21 +92,128 @@
 }
 
 #services p {
-    color: var(--dark-color);
+    color: var(--white-color);
 }
 
 
 /* ==== Media Queries ==== */
 
-@media only screen and (max-width:768px) {
+@media only screen and (max-width:576px) {
     #services {
-        padding-top: 40px;
-        padding-bottom: 40px;
+        display: flex;
+        width: 100%;
+        height: 780px;
+        flex-direction: column;
+    }
+    #services .service-img {
+        width: 100%;
+    }
+    #services .service-text {
+        width: 300px;
+        height: 100%;
+        padding: 30px 0px 30px 40px;
     }
 }
 
+@media only screen and (max-width:368px) {
+    #services {
+        display: flex;
+        width: 100%;
+        height: 700px;
+        flex-direction: column;
+    }
+    #services .service-img {
+        width: 100%;
+        height: auto;
+    }
+    #services img {
+        width: 100%;
+        height: auto;
+    }
+    #services .service-text {
+        width: 250px;
+        height: auto;
+        padding: 30px 0px 30px 30px;
+    }
+}
+
+
+/* ===================================================
+# Services-2
+=====================================================*/
+
+#services-2 {
+    background: var(--primary-color);
+    color: var(--white-color);
+    display: flex;
+    width: 100%;
+    height: 450px;
+    flex-direction: row;
+    overflow: hidden;
+}
+
+#services-2 .service-img {
+    width: 55.1%;
+    height: 100%;
+}
+
+#services-2 img {
+    width: 100%;
+    height: 100%;
+}
+
+#services-2 .service-text {
+    width: 50%;
+    height: 100%;
+    padding: 90px 50px 0 50px;
+}
+
+#services-2 h2 {
+    font-family: 'Aboreto', cursive;
+}
+
+#services-2 p {
+    color: var(--white-color);
+}
+
+
+/* ==== Media Queries ==== */
+
 @media only screen and (max-width:576px) {
-    #services .container {
-        padding: 0 20px;
+    #services-2 {
+        display: flex;
+        width: 100%;
+        height: 680px;
+        flex-direction: column;
+    }
+    #services-2 .service-img {
+        width: 100%;
+    }
+    #services-2 .service-text {
+        width: 300px;
+        height: 100%;
+        padding: 30px 0px 30px 40px;
+    }
+}
+
+@media only screen and (max-width:368px) {
+    #services-2 {
+        display: flex;
+        width: 100%;
+        height: 680px;
+        flex-direction: column;
+    }
+    #services-2 .service-img {
+        width: 100%;
+        height: auto;
+    }
+    #services-2 img {
+        width: 100%;
+        height: auto;
+    }
+    #services-2 .service-text {
+        width: 250px;
+        height: auto;
+        padding: 30px 0px 30px 30px;
     }
 }
