--- a/beautifying/assets/css/about.css
+++ b/beautifying/assets/css/about.css
@@ -1,146 +1,38 @@
 /*===================================================
-# General | Custom CSS
-====================================================*/
-body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    background: radial-gradient(#e4d2d2, #cfa2a0);
-}
-
-* {
-    font-family: 'Poppins', sans-serif;
-}
-
-
-.container {
-    max-width: 1300px;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
-}
-
-.row {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-}
-
-.title {
-    text-align: center;
-    margin: 0 auto 40px;
-    position: relative;
-    line-height: 60px;
-    color: #555;
-}
-
-.title::after {
-    content: '';
-    background: #c46a21;
-    width: 80px;
-    height: 5px;
-    border-radius: 5px;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-}
-
-h4 {
-    color: #555;
-    font-weight: normal;
-}
-
-p {
-    color: #555;
-}
-
-a {
-    text-decoration: none;
-    color: #555;
-}
-
-.btn {
-    display: inline-block;
-    background: #c46a21;
-    color: #ffffff;
-    padding: 8px 30px;
-    margin: 30px 0;
-    border-radius: 30px;
-    transition: background 0.5s ease;
-}
-
-.btn:hover {
-    background: radial-gradient(#744c4c, #f38680);
-}
-
-.card {
-    background: #faf3f2;
-    border-radius: 5px;
-    padding: 40px;
-}
-
-/*===================================================
-# Header | Navigation
-====================================================*/
-
-.navbar {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-}
-
-.navbar .nav-brand img {
-    width: 125px;
-}
-
-.navbar-nav {
-    flex: 1;
-    text-align: right;
-}
-
-.navbar-nav ul {
-    display: inline-block;
-    list-style-type: none;
-}
-
-.navbar-nav ul li {
-    display: inline-block;
-    margin: 20px;
-}
-
-
-/* ====  Media Queries ==== */
-
-@media only screen and (max-width: 800px) {
-    nav ul {
-        position: absolute;
-        top: 70px;
-        left: 0;
-        background: #333;
-        width: 100%;
-    }
-
-    nav ul li {
-        display: block;
-        margin-right: 50px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-
-    nav ul li a {
-        color: #fff;
-    }
-}
-
-/*===================================================
 # About
 ====================================================*/
 
 .about {
     margin: 30px 0 60px 0;
+}
+
+.about h1.title {
+    font-size: 90px;
+    margin-bottom: 45px;
+}
+
+.about h1.title::after {
+    display: none;
+}
+
+.about .row {
+    margin-top: 32px;
+    margin-bottom: -30px;
+}
+
+.about .card {
+    position: relative;
+    box-shadow: 0 3px 10px rgba(118, 116, 116, 0.6);
+}
+
+.about .card::before {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 30px;
+    top: 0;
+    left: 0;
+    background: #c46a21;
 }
 
 /*===================================================
@@ -173,76 +65,5 @@ a {
 }
 
 .team .card-body {
-    text-align: center;
-}
-
-
-/*===================================================
-# Footer
-====================================================*/
-.footer {
-    background: #000;
-    color: #8a8a8a;
-    font-size: 14px;
-    padding: 60px 0 20px;
-}
-
-.footer p {
-    color: #8a8a8a;
-}
-
-.footer h3 {
-    color: #fff;
-    margin-bottom: 20px;
-}
-
-.footer-col-1,
-.footer-col-2,
-.footer-col-3,
-.footer-col-4 {
-    min-width: 250px;
-    margin-bottom: 20px;
-}
-
-.footer-col-1 {
-    flex-basis: 30%;
-}
-
-.footer-col-2 {
-    flex: 1;
-    text-align: center;
-}
-
-.footer-col-2 img {
-    width: 180px;
-    margin-bottom: 20px;
-}
-
-.footer-col-3,
-.footer-col-4 {
-    flex-basis: 12%;
-    text-align: center;
-}
-
-ul {
-    list-style-type: none;
-}
-
-.app-logo {
-    margin-top: 20px;
-}
-
-.app-logo img {
-    width: 140px;
-}
-
-.footer-hr {
-    border: none;
-    background: #b5b5b5;
-    height: 1px;
-    margin: 20px 0;
-}
-
-.copyright {
     text-align: center;
 }
