--- a/beautifying/assets/css/main.css
+++ b/beautifying/assets/css/main.css
@@ -1,45 +1,21 @@
-* {
+/*===================================================
+# General | Custom CSS
+====================================================*/
+body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-x: hidden;
+    background: radial-gradient(#e4d2d2, #cfa2a0);
 }
 
-body {
+* {
     font-family: 'Poppins', sans-serif;
 }
 
-.navbar {
-    display: flex;
-    align-items: center;
-    padding: 20px;
-}
-
-nav {
-    flex: 1;
-    text-align: right;
-}
-
-nav ul {
-    display: inline-block;
-    list-style-type: none;
-}
-
-nav ul li {
-    display: inline-block;
-    margin: 20px;
-}
-
-a {
-    text-decoration: none;
-    color: #555;
-}
-
-p {
-    color: #555;
-}
 
 .container {
-    max-width: 1300px;
+    max-width: 1200px;
     margin: auto;
     padding-left: 25px;
     padding-right: 25px;
@@ -47,85 +23,51 @@ p {
 
 .row {
     display: flex;
+    justify-content: center;
     align-items: center;
+    gap: 1rem;
+}
+
+.grid-1 {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    height: 100%;
+}
+
+.grid-2 {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    height: 100%;
+}
+
+.grid-3 {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5px;
+}
+
+.grid-ish {
+    display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    gap: 1em;
 }
 
-.col-1 {
-    flex-basis: 50%;
-    min-width: 300px;
+.grip-ish>* {
+    flex: 1 1 10em;
 }
 
-.col-1 img {
-    max-width: 90%;
-    padding: 50px 0;
-}
-
-.col-1 h1 {
-    font-size: 50px;
-    line-height: 60px;
-    margin: 25px 0;
-}
-
-.btn {
-    display: inline-block;
-    background: #c46a21;
-    color: #ffffff;
-    padding: 8px 30px;
-    margin: 30px 0;
-    border-radius: 30px;
-    transition: background 0.5s;
-}
-
-.header {
-    background: radial-gradient(#e4d2d2, #cfa2a0);
-}
-
-.header.row {
-    margin-top: 70px;
-}
-
-.btn:hover {
-    background: radial-gradient(#744c4c, #f38680);
-}
-
-.categories {
-    margin: 70px 0;
-}
-
-.col-2 {
-    flex-basis: 30%;
-    min-width: 250px;
-    margin-bottom: 30px;
-}
-
-.col-2 img {
-    width: 100%;
-}
-
-.small-container {
-    max-width: 1080px;
-    margin: auto;
-    padding-left: 25px;
-    padding-right: 25px;
-}
-
-.col-3 {
-    flex-basis: 25%;
-    padding: 10px;
-    min-width: 200px;
-    margin-bottom: 50px;
-    transition: transform 0.5s;
-}
-
-.col-3 img {
-    width: 100%;
+@media only screen and (max-width:576px) {
+    .grid-2,
+    .grid-3 {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 15px;
+    }
 }
 
 .title {
     text-align: center;
-    margin: 0 auto 80px;
+    margin: 0 auto 40px;
     position: relative;
     line-height: 60px;
     color: #555;
@@ -148,6 +90,51 @@ h4 {
     font-weight: normal;
 }
 
+p {
+    color: #555;
+}
+
+a {
+    text-decoration: none;
+    color: #555;
+}
+
+.btn {
+    display: inline-block;
+    background: #c46a21;
+    color: #ffffff;
+    padding: 8px 30px;
+    margin: 30px 0;
+    border-radius: 30px;
+    transition: background 0.5s ease;
+}
+
+.btn:hover {
+    background: radial-gradient(#b16666, #f38680);
+}
+
+.card {
+    background: #faf3f2;
+    border-radius: 5px;
+    padding: 40px;
+}
+
+.col-2 {
+    flex-basis: 30%;
+    min-width: 250px;
+    margin-bottom: 30px;
+}
+
+.col-2 img {
+    width: 100%;
+}
+
+.col-3 {
+    padding: 5px;
+    margin-bottom: 40px;
+    transition: transform 0.5s;
+}
+
 .col-3 p {
     font-size: 14px;
 }
@@ -157,11 +144,37 @@ h4 {
     transform: translateY(-5px);
 }
 
-.fa fa-align-justify {
-    display: none;
+/*===================================================
+# Header | Navigation
+====================================================*/
+
+.navbar {
+    display: flex;
+    align-items: center;
+    padding: 20px;
 }
 
-/*----------for menu--------------*/
+.navbar .nav-brand img {
+    width: 125px;
+}
+
+.navbar-nav {
+    flex: 1;
+    text-align: right;
+}
+
+.navbar-nav ul {
+    display: inline-block;
+    list-style-type: none;
+}
+
+.navbar-nav ul li {
+    display: inline-block;
+    margin: 20px;
+}
+
+
+/* ====  Media Queries ==== */
 
 @media only screen and (max-width: 800px) {
     nav ul {
@@ -182,71 +195,11 @@ h4 {
     nav ul li a {
         color: #fff;
     }
-
-    .fa fa-align-justify {
-        display: block;
-        cursor: pointer;
-    }
 }
 
-/*-------products--------*/
-.row-2 {
-    justify-content: space-between;
-    margin: 100px auto 50px;
-}
-
-.acc-page {
-    padding: 50px 0;
-    background: radial-gradient(#e4d2d2, #cfa2a0);
-}
-
-.form-container {
-    background: #fff;
-    width: 300px;
-    height: 400px;
-    position: relative;
-    text-align: center;
-    padding: 20px 0;
-    margin: auto;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-}
-
-.form-container span {
-    font-weight: bold;
-    padding: 0 10px;
-    color: #555;
-    cursor: pointer;
-    width: 100px;
-    display: inline-block;
-}
-
-.form-btn {
-    display: inline-block;
-}
-
-.form-container form {
-    max-width: 100px;
-    padding: 0 20px;
-    position: absolute;
-    top: 130px;
-}
-
-form input {
-    width: 100%;
-    height: 30px;
-    margin: 10px 0;
-    padding: 0 10px;
-    border: 1px solid #ccc;
-}
-
-form .btn {
-    width: 100%;
-    border: none;
-    cursor: pointer;
-    margin: 10px 0;
-}
-
-/*-------footer------*/
+/*===================================================
+# Footer
+====================================================*/
 .footer {
     background: #000;
     color: #8a8a8a;
@@ -312,20 +265,4 @@ ul {
 
 .copyright {
     text-align: center;
-}
-
-/*--------customer services----------*/
-.testimonial {
-    padding-top: 100px;
-}
-
-.testimonial col-3 {
-    text-align: center;
-    padding: 40px 20px;
-}
-
-.testimonial .col-3 img {
-    width: 50px;
-    margin-top: 20px;
-    border-radius: 50%;
 }
