--- a/beautifying/assets/css/main.css
+++ b/beautifying/assets/css/main.css
@@ -28,6 +28,15 @@ body {
     gap: 1rem;
 }
 
+@media only screen and (max-width: 768px) {
+    .row {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+}
+
 .grid-1 {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
@@ -57,7 +66,8 @@ body {
     flex: 1 1 10em;
 }
 
-@media only screen and (max-width:576px) {
+@media only screen and (max-width:768px) {
+
     .grid-2,
     .grid-3 {
         grid-template-columns: repeat(1, 1fr);
@@ -163,39 +173,114 @@ a {
     text-align: right;
 }
 
-.navbar-nav ul {
+.navbar-nav {
     display: inline-block;
     list-style-type: none;
 }
 
-.navbar-nav ul li {
+.navbar-nav .nav-item {
     display: inline-block;
     margin: 20px;
 }
 
+.navbar #check,
+.navbar #check-btn {
+    display: none;
+}
 
-/* ====  Media Queries ==== */
+/* ==== Media Queries ==== */
 
-@media only screen and (max-width: 800px) {
-    nav ul {
-        position: absolute;
-        top: 70px;
-        left: 0;
-        background: #333;
-        width: 100%;
+@media only screen and (max-width: 1060px) {
+    .navbar {
+        padding: 0px;
+    }
+    
+    .navbar .nav-brand {
+        margin-right: auto;
     }
 
-    nav ul li {
+    .navbar .nav-brand img {
+        width: 90px;
+    }
+
+    .navbar #check-btn {
         display: block;
-        margin-right: 50px;
-        margin-top: 10px;
-        margin-bottom: 10px;
+        cursor: pointer;
+        margin-right: 30px;
+        font-size: 22px;
     }
 
-    nav ul li a {
-        color: #fff;
+    .navbar .navbar-nav {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        background: #fff;
+        top: 0;
+        left: -150%;
+        height: 1200px;
+        width: 100%;
+        margin-top: 75px;
+        padding: 30px 30px;
+        transition: all .8s;
+        border-top: 1px solid var(--light-gray-color);
+        text-align: left;
+        z-index: 1030;
+    }
+
+    .navbar #check:checked~.navbar-nav {
+        left: 0;
+    }
+
+    .navbar-nav .nav-item {
+        margin: 15px 0;
+    }
+
+    .nav-item .nav-link {
+        font-size: 18px;
     }
 }
+
+/* @media only screen and (max-width: 576px) {
+    .navbar #check-btn {
+        margin-right: 20px;
+    }
+
+    .navbar .nav-brand {
+        margin-left: -15px;
+    }
+
+    .nav-brand img {
+        width: 180px;
+    }
+}
+
+@media only screen and (max-width: 326px) {
+    .navbar .nav-brand {
+        margin-left: -15px;
+    }
+
+    .nav-brand img {
+        width: 160px;
+    }
+
+    .navbar #check-btn {
+        font-size: 22px;
+    }
+
+    .navbar .navbar-nav {
+        padding: 40px 25px;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    .navbar .nav-brand {
+        margin-left: -15px;
+    }
+
+    .navbar #check-btn {
+        font-size: 18px;
+    }
+} */
 
 /*===================================================
 # Footer
