--- a/beautifying/assets/css/contact.css
+++ b/beautifying/assets/css/contact.css
@@ -24,6 +24,27 @@
     margin-top: 5px;
 }
 
+.row-gridy {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    height: 100%;
+}
+
+@media only screen and (max-width:768px) {
+    .row-gridy {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        gap: 5px;
+        height: 100%;
+    }
+
+    .contact p {
+        font-size: 17px;
+    }
+    
+}
+
 /*===================================================
 # Map
 ====================================================*/
