--- a/beautifying/assets/css/main.css
+++ b/beautifying/assets/css/main.css
@@ -28,51 +28,35 @@ body {
     gap: 1rem;
 }
 
+@media only screen and (max-width: 1060px) {
+    .container {
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+
+    /* .row {
+        flex-direction: column;
+    } */
+}
+
 @media only screen and (max-width: 768px) {
     .row {
-        display: flex;
-        justify-content: center;
-        align-items: center;
         flex-direction: column;
     }
-}
 
-.grid-1 {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    height: 100%;
-}
-
-.grid-2 {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 5px;
-    height: 100%;
-}
-
-.grid-3 {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 5px;
-}
-
-.grid-ish {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1em;
-}
-
-.grip-ish>* {
-    flex: 1 1 10em;
-}
-
-@media only screen and (max-width:768px) {
-
-    .grid-2,
-    .grid-3 {
-        grid-template-columns: repeat(1, 1fr);
-        gap: 15px;
+    .container {
+        max-width: 1100px;
+        margin: auto;
+        padding-left: 60px;
+        padding-right: 60px;
     }
+}
+
+@media only screen and (max-width: 576px) {
+    .title {
+        font-size: 17px;
+    }
+
 }
 
 .title {
@@ -194,7 +178,7 @@ a {
     .navbar {
         padding: 0px;
     }
-    
+
     .navbar .nav-brand {
         margin-right: auto;
     }
@@ -206,7 +190,7 @@ a {
     .navbar #check-btn {
         display: block;
         cursor: pointer;
-        margin-right: 30px;
+        margin-right: 0px;
         font-size: 22px;
     }
 
@@ -240,47 +224,15 @@ a {
     }
 }
 
-/* @media only screen and (max-width: 576px) {
+@media only screen and (max-width: 576px) {
     .navbar #check-btn {
-        margin-right: 20px;
+        margin-right: 0px;
     }
 
     .navbar .nav-brand {
         margin-left: -15px;
-    }
-
-    .nav-brand img {
-        width: 180px;
     }
 }
-
-@media only screen and (max-width: 326px) {
-    .navbar .nav-brand {
-        margin-left: -15px;
-    }
-
-    .nav-brand img {
-        width: 160px;
-    }
-
-    .navbar #check-btn {
-        font-size: 22px;
-    }
-
-    .navbar .navbar-nav {
-        padding: 40px 25px;
-    }
-}
-
-@media only screen and (max-width: 300px) {
-    .navbar .nav-brand {
-        margin-left: -15px;
-    }
-
-    .navbar #check-btn {
-        font-size: 18px;
-    }
-} */
 
 /*===================================================
 # Footer
@@ -289,7 +241,7 @@ a {
     background: #000;
     color: #8a8a8a;
     font-size: 14px;
-    padding: 60px 0 20px;
+    padding: 60px 0 20px 0;
 }
 
 .footer p {
@@ -298,14 +250,6 @@ a {
 
 .footer h3 {
     color: #fff;
-    margin-bottom: 20px;
-}
-
-.footer-col-1,
-.footer-col-2,
-.footer-col-3,
-.footer-col-4 {
-    min-width: 250px;
     margin-bottom: 20px;
 }
 
