More updates on features

--- a/beautifying/assets/css/about.css
+++ b/beautifying/assets/css/about.css
@@ -47,6 +47,10 @@
         font-size: 30px;
         margin-bottom: 45px;
     }
+
+    .about .card {
+        width: 100%;
+    }
 }
 
 /*===================================================
