--- a/cityharvest/assets/css/index.css
+++ b/cityharvest/assets/css/index.css
@@ -11,7 +11,7 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: top;
-    position: relative;
+    /* position: relative; */
 }
 
 .overlay {
@@ -37,7 +37,7 @@
 
 #hero .hero-txt {
     text-align: center;
-    margin-bottom: 100px;
+    margin-bottom: 120px;
     z-index: 2;
 }
 
@@ -75,6 +75,7 @@
     backdrop-filter: blur(10px);
     position: absolute;
     bottom: 0;
+    margin-bottom: 30px;
     width: 800px;
     height: 150px;
     z-index: 2;
@@ -90,3 +91,32 @@
     font-weight: 900;
     font-family: 'Inter', sans-serif;
 }
+
+/* =====================================================
+# Pastors
+===================================================== */
+#pastors {
+    /* height: 500px; */
+    padding: 60px 0 40px 0;
+}
+
+#pastors .container {
+    padding: 0 20px;
+}
+
+
+#pastors .row {
+    gap: 3rem;
+}
+
+/* #pastors .pastors-img {
+    flex-basis: 80%;
+} */
+
+#pastors .pastors-img img {
+    width: 100%;
+}
+
+/* #pastors .pastors-txt {
+    flex-basis: 80%;
+} */
