--- a/cityharvest/assets/css/utilities.css
+++ b/cityharvest/assets/css/utilities.css
@@ -3,7 +3,7 @@
 ==================================================*/
 :root {
     --primary-color: #419203;
-    --secondary-color:  #f3fae5;
+    --secondary-color: #f3fae5;
     --dark-color: #343434;
     --white-color: #fff;
     --light-color: #f8f9fa;
@@ -55,22 +55,21 @@
 ==================================================*/
 .container {
     max-width: 1200px;
-    margin: 0 auto;
-    overflow: hidden;
+    margin: auto;
+    overflow: auto;
     padding: 0 40px;
 }
 
 .row {
     display: flex;
-    gap: 8em;
     justify-content: center;
+    align-items: center;
     overflow: hidden;
 }
 
 @media only screen and (max-width: 1060px) {
     .row {
         justify-content: center;
-        gap: 6em;
     }
 }
 
@@ -78,7 +77,6 @@
     .row {
         flex-flow: column wrap;
         justify-content: center;
-        gap: 3em;
     }
 }
 
@@ -87,7 +85,6 @@
         flex-flow: column wrap;
         justify-content: center;
         align-items: center;
-        gap: 3em;
     }
 }
 
